# ecommerce-intent-reasoning-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  ecommerce-intent-engine-technical-spec.md  justfile  pyproject.toml
.cursor/rules/: agents-llm.mdc  api-routes.mdc  batch-queue-worker.mdc  ecommerce-intent-overview.mdc  engine-pipeline.mdc  exceptions.mdc  ingestion-channels.mdc  mcp-a2a.mdc  models-pydantic.mdc  observability.mdc  platform-integrations.mdc  python-config-settings.mdc  tenancy.mdc  testing.mdc
.github/workflows/: ci.yml
data/: intent_examples.json
data/policies/: default.json
docs/: DEPLOY.md  PRODUCTION.md
etc/: otel-collector-config.yaml  prometheus.yml
evals/: __init__.py  metrics.py  runner.py
evals/datasets/: golden_set.json
scripts/: init_db.sql  migrate_tenants_table.sql  run_eval.py  run_eval_simple.py  seed_catalog.py  seed_tenant.py
src/intent_engine/: __init__.py  config.py  engine.py  exceptions.py
src/intent_engine/a2a/: __init__.py  agent_card.py  handler.py
src/intent_engine/agents/: __init__.py  catalog_agent.py  models.py  orchestrator.py  pre_purchase_agent.py  response_generator.py  router.py
src/intent_engine/api/: __init__.py  a2a_routes.py  admin_routes.py  agent_routes.py  batch.py  batch_models.py  middleware.py  routes.py  server.py  webhooks.py  websocket.py  ws_auth.py  ws_models.py
src/intent_engine/batch/: __init__.py  queue.py  worker.py
src/intent_engine/extractors/: __init__.py  embedding.py  entity_extractor.py  sentiment.py
src/intent_engine/ingestion/: __init__.py  base.py  chat.py  email.py  form.py
src/intent_engine/integrations/: __init__.py  base.py  shopify.py
src/intent_engine/llm/: __init__.py  client.py
tests/: __init__.py  conftest.py
tests/integration/: test_a2a.py  test_api.py  test_batch_api.py  test_db_tenant_store.py  test_mcp_server.py  test_observability.py  test_tenant_isolation.py  test_websocket_api.py
tests/unit/: test_admin_routes.py  test_adobe_commerce_connector.py  test_batch_queue.py  test_bigcommerce_connector.py  test_catalog_and_router.py  test_compound_detector.py  test_conflict_resolver.py  test_email_adapter.py  test_embedding.py  test_engine.py  test_entity_extractor.py  test_form_adapter.py  test_orchestration_agent.py  test_policy_engine.py  test_pydantic_ai_agents.py  test_rate_limiter.py  test_sentiment_analyzer.py  test_shopify_mapping.py  test_tenant_middleware.py  test_websocket_manager.py  test_woocommerce_connector.py
(+53 files in other folders)
