[project]
name = "intent-engine"
version = "0.1.0"
description = "eCommerce Intent Reasoning Engine - MVP"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # spaCy not yet compatible with Python 3.14
license = { text = "MIT" }
authors = [{ name = "Blake", email = "blake@orderloop.com" }]
keywords = ["ecommerce", "intent", "nlp", "reasoning", "chatbot"]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=1.57.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "dateparser>=1.2.0",
    "numpy>=2.0.0",
    # Phase 2 additions
    "beautifulsoup4>=4.12.0",   # Email HTML parsing
    "transformers>=4.40.0",      # Sentiment model
    "torch>=2.0.0",              # Transformers backend
    # Multi-agent access
    "mcp>=1.9.0",                # MCP server for agent access
    "starlette>=0.40.0",         # SSE transport for MCP
    # Phase 3: OpenTelemetry observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-exporter-prometheus>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    # Phase 3: Structured logging
    "python-json-logger>=3.2.0",
    # Phase 3: Prometheus metrics
    "prometheus-client>=0.21.0",
    # Phase 3: WebSocket support (already in uvicorn[standard])
    "websockets>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
seed-catalog = "scripts.seed_catalog:main"
run-eval = "scripts.run_eval:main"
mcp-server = "intent_engine.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intent_engine"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
